# admin-api/database_helpers.go
@@ -87,6 +87,21 @@ func getStoreUploadIds(context context.Context, storeId string) ([]string, error
 	return uploadIds, nil
 }
 
+func getStoreUploadRef(context context.Context, storeId string, uploadId string) (*firestore.DocumentRef, error) {
+
+	log.Printf("Creating upload ref for %v/%v", storeId, uploadId)
+
+	firestoreClient, err := firestoreClient(context)
+	if err != nil {
+		log.Printf("Unable to talk to database: %v", err)
+		return nil, err
+	}
+
+	uploadRef := firestoreClient.Collection(storesCollectionName).Doc(storeId).Collection(storeUploadsCollectionName).Doc(uploadId)
+
+	return uploadRef, nil
+}
+
 func getStoreUploadDoc(context context.Context, storeId string, uploadId string) (*firestore.DocumentSnapshot, error) {
 
 	log.Printf("Fetching upload document for %v/%v", storeId, uploadId)
